--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.0/socket.io.js" integrity="sha512-+l9L4lMTFNy3dEglQpprf7jQBhQsQ3/WvOnjaN/+/L4i0jOstgScV0q2TjfvRF4V+ZePMDuZYIQtg5T4MKr+MQ==" crossorigin="anonymous"></script>
     <script>
-        const socket = io('http://localhost:3000');
+        const socket = io('https://ara-react-socket-server.herokuapp.com/');
         const formulario = document.querySelector('#miFormulario');
         const mensajes = document.querySelector('#misMensajes');
         const txtMensaje = document.querySelector('#txtMensaje');
